--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
+    "motion": "^11.15.0",
     "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18",
