--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/react": "^5.1.0",
+    "@nextui-org/react": "^2.6.10",
     "@radix-ui/react-accordion": "^1.2.2",
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
