--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@nextui-org/react": "^2.6.10",
     "@radix-ui/react-accordion": "^1.2.2",
     "@shadcn/ui": "^0.0.4",
+    "antd": "^5.23.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
+    "mongodb": "^6.13.0",
     "motion": "^11.15.0",
     "next": "14.2.20",
     "react": "^18",
